🔧 Divert `Brightness Up` and `Brightness Down`

--- a/config.yaml
+++ b/config.yaml
@@ -5,15 +5,15 @@
     crown-smooth, divert-crown, divert-gkeys, m-key-leds, mr-key-led, gesture2-gestures, gesture2-divert, gesture2-params, sidetone, equalizer, adc_power_management]
   _battery: 4096
   _modelId: B35B408A0000
-  _sensitive: {backlight: false, divert-keys: true, fn-swap: false, multiplatform: false}
+  _sensitive: {backlight: false, divert-keys: false, fn-swap: false, multiplatform: false}
   _unitId: 16BA8307
   backlight: true
   change-host: null
   disable-keyboard-keys: {1: false, 2: false, 4: false, 8: false, 16: false}
-  divert-keys: {10: 1, 110: 0, 111: 0, 191: 0, 199: 0, 200: 0, 209: 0, 210: 0, 211: 0, 224: 1, 225: 0, 226: 0, 227: 0, 228: 0, 229: 0, 230: 0, 231: 0, 232: 0,
+  divert-keys: {10: 1, 110: 0, 111: 0, 191: 0, 199: 1, 200: 1, 209: 0, 210: 0, 211: 0, 224: 1, 225: 0, 226: 0, 227: 0, 228: 0, 229: 0, 230: 0, 231: 0, 232: 0,
     233: 0, 234: 0, 235: 0, 236: 0}
   fn-swap: true
-  multiplatform: 1
+  multiplatform: 0
 - _NAME: Wireless Mobile Mouse MX Anywhere 2
   _absent: [hi-res-scroll, lowres-scroll-mode, scroll-ratchet, smart-shift, thumb-scroll-invert, thumb-scroll-mode, onboard_profiles, report_rate, pointer_speed,
     speed-change, backlight, backlight-timed, fn-swap, persistent-remappable-keys, disable-keyboard-keys, crown-smooth, divert-crown, divert-gkeys, m-key-leds,
